--- a/references.bib
+++ b/references.bib
@@ -167,6 +167,25 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2017A&A...597A.135B,
+   author = {{Bom}, C.~R. and {Makler}, M. and {Albuquerque}, M.~P. and {Brandt}, C.~H.
+	},
+    title = "{A neural network gravitational arc finder based on the Mediatrix filamentation method}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {1607.04644},
+ keywords = {gravitational lensing: strong, techniques: image processing, methods: numerical},
+     year = 2017,
+    month = jan,
+   volume = 597,
+      eid = {A135},
+    pages = {A135},
+      doi = {10.1051/0004-6361/201629159},
+   adsurl = {http://adsabs.harvard.edu/abs/2017A%26A...597A.135B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{2006astro.ph..6757A,
    author = {{Alard}, C.},
     title = "{Automated detection of gravitational arcs}",
